# mydatabase

./: .gitignore  CMakeLists.txt  README.md
include/mydb/: base_object.hpp  database.hpp  db_object.hpp
src/: bla.cpp
tests/: main.cpp
